--- a/src/components/Card/style.module.css
+++ b/src/components/Card/style.module.css
@@ -7,7 +7,11 @@
    4. Add padding
 */
 .card {
-  /* Add your styling here */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5rem;
+  padding: 1rem;
   border-radius: 5px;
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
     rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
@@ -32,7 +36,7 @@
 */
 
 .card_descript {
-  /* Add your styling here */
+  flex: 1;
   font-size: 18px;
 }
 
