--- a/src/components/Card/style.module.css
+++ b/src/components/Card/style.module.css
@@ -12,6 +12,7 @@
   align-items: center;
   gap: 0.5rem;
   padding: 1rem;
+  min-height: 400px;
   border-radius: 5px;
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
     rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
